--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dash
-dash-bootstrap-components
-pandas
-plotly
-openpyxl
-unidecode
-gunicorn
+dash==2.17.1
+dash-bootstrap-components==1.5.0
+pandas==2.1.4
+plotly==5.17.0
+openpyxl==3.1.2
+requests==2.31.0
+gunicorn==21.2.0
